--- a/00-servidor-web/curriculum.html
+++ b/00-servidor-web/curriculum.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Currículum Vitae - Jairo Quispe</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 40px;
+            background-color: #f5f7fa;
+            color: #333;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin: 0;
+            color: #1a237e;
+        }
+
+        h2 {
+            font-size: 1.2em;
+            margin-top: 5px;
+            color: #3949ab;
+        }
+
+        h3 {
+            border-bottom: 2px solid #1a237e;
+            padding-bottom: 4px;
+            margin-top: 30px;
+            color: #1a237e;
+        }
+
+        table {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        img {
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+        }
+
+        ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        ul li::before {
+            content: "✔️ ";
+            color: #1b5e20;
+        }
+
+        p, li {
+            font-size: 1em;
+            line-height: 1.5em;
+        }
+
+        hr {
+            border: none;
+            border-top: 2px solid #ccc;
+            margin: 30px 0;
+        }
+
+        strong {
+            color: #0d47a1;
+        }
+    </style>
 </head>
 <body>
-    <table width="100%">
+    <table>
         <tr>
             <td width="200">
                 <img src="../images/jairod.jpg" alt="Foto de Jairo" width="180">
