Curriculum Vitae - CSS changes.

--- a/00-servidor-web/curriculum.html
+++ b/00-servidor-web/curriculum.html
@@ -103,7 +103,7 @@
     <h3>Habilidades</h3>
     <ul>
         <li>Habilidades blandas: liderazgo, comunicación, trabajo en equipo</li>
-        <li>Desarrollo backend: Node.js, Java, SQL</li>
+        <li>Desarrollo backend: Node.js, Java, SQL, Typescript</li>
         <li>Análisis de datos: Python, Excel, herramientas de visualización</li>
     </ul>
 </body>
