--- a/tablas_css_more/tablas_imagenes.html
+++ b/tablas_css_more/tablas_imagenes.html
@@ -2,44 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Ejemplo de listas, enlaces e IDs</title>
+  <title>Ejemplo de imagen y enlace</title>
 </head>
 <body>
 
-  <h1 id="inicio">Ejemplos HTML</h1>
+  <h2>Insertar una imagen</h2>
+  <p>A continuación se muestra cómo insertar una imagen desde una ruta relativa:</p>
 
-  <h2>Listas desordenadas y ordenadas</h2>
-  <p>A continuación un ejemplo de lista desordenada (`ul`) con elementos simples:</p>
-  <ul>
-    <li>Manzana</li>
-    <li>Banano</li>
-    <li>Naranja</li>
-  </ul>
+  <img src="../images/jairod.jpg" alt="Foto de Jairo" width="250">
 
-  <p>Y ahora una lista ordenada (`ol`) anidada dentro de un `ul`:</p>
-  <ul>
-    <li>Frutas
-      <ol>
-        <li>Manzana</li>
-        <li>Banano</li>
-        <li>Naranja</li>
-      </ol>
-    </li>
-    <li>Verduras</li>
-  </ul>
-
-  <h2>Uso de enlaces (`href`) para navegar</h2>
-  <p>Puedes visitar otra página HTML usando un enlace:</p>
-  <a href="pagina2.html">Ir a otra página</a>
-
-  <h2>Uso de ID y saltos de línea</h2>
-  <p>Este enlace te lleva al inicio de la página usando el ID:</p>
-  <a href="#inicio">Ir al inicio</a>
-
-  <p>Aquí vemos cómo se usa el salto de línea con `<br>`:</p>
-  Línea uno<br>
-  Línea dos<br>
-  Línea tres
+  <h2>Imagen dentro de un enlace</h2>
+  <p>Haz clic en la imagen para ir a otra página:</p>
+  <a href="pagina2.html">
+    <img src="../images/jairod.jpg" alt="Foto de Jairo" width="250">
+  </a>
 
 </body>
 </html>
