--- a/boostrap/boostrap.html
+++ b/boostrap/boostrap.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ejemplo Simple con Bootstrap</title>
-  <!-- Bootstrap CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejemplo de Grid - Versión Simple</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body { padding: 20px; }
+        div[class^="col"] { 
+            padding: 15px;
+            margin-bottom: 10px;
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+    </style>
 </head>
 <body>
-
-  <div class="container mt-5">
-    <h1 class="text-center mb-4">Bienvenido a mi sitio con Bootstrap</h1>
+    <h2 id="ejemplo">Ejemplo</h2>
 
     <div class="row">
-      <div class="col-md-6">
-        <button class="btn btn-primary w-100 mb-3">Haz clic aquí</button>
-      </div>
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Tarjeta de ejemplo</h5>
-            <p class="card-text">Este es un ejemplo básico de tarjeta usando Bootstrap 5. Puedes añadir más contenido aquí.</p>
-          </div>
-        </div>
-      </div>
+        <div class="col-md-6 text-bg-primary">1</div>
+        <div class="col-md-6 text-bg-secondary">2</div>
+        <div class="col-md-3 text-bg-primary">1</div>
+        <div class="col-md-3 text-bg-secondary">2</div>
+        <div class="col-md-3 text-bg-success">3</div>
+        <div class="col-md-3 text-bg-danger">4</div>
     </div>
-  </div>
 
-  <!-- Bootstrap JS (opcional, para componentes interactivos) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
