Manejo de arreglos, funciones y más en ts

--- a/00-servidor-web/assets/js/c-javascript.html
+++ b/00-servidor-web/assets/js/c-javascript.html
@@ -9,7 +9,7 @@
         console.log("Hola");
     </script>
     <!-- Script externo -->
-    <script src="01-javascript.js"></script>
+    <script src="02-typescript.js"></script>
 </head>
 <body>
     <!-- El cuerpo puede estar vacío -->
